[package]
name = "pulsar"
version = "0.1.0"
edition = "2024"

[dependencies]
llrt_modules = { path = "llrt/llrt_modules", default-features = true }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.9.0", features = ["full-async"] }
log = "0.4.17"
clap = { version = "4.0.4", features = ["derive", "cargo"]}
env_logger = "0.11.8"
anyhow = "1.0"
thiserror = "2.0.12"
rayon = "1.10.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
