[package]
name = "pulsar"
version = "0.1.0"
edition = "2024"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dependencies]
async-trait = "0.1"
llrt_core = { path = "llrt/llrt_core", default-features = true }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.9.0", features = ["full-async"] }
clap = { version = "4.0.4", features = ["derive", "cargo"]}
anyhow = "1.0"
thiserror = "2.0.12"
rayon = "1.10.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
num_cpus = "1.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["io-util"] }
sled = "0.34.7"
bincode = "1"

